-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 14, 15
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8237061 | 15 | Jatin Bhateja | P3 | Resolved | Fixed | b06 |
| JDK-8238128 | 14.0.1 | Unassigned | P3 | Resolved | Fixed | b02 |
While merging the vectorIntrinsics with generic operands, we came across an issue:
If the vector operand is a phi node then Matcher::specialize_vector_operand(MachNode* m, uint idx) is not able to specialize vector register type and throws an assert that phi is not a Mach node.
This problem was not seen on jdk mainline, mostly because vector phi nodes usually don't occur there as auto-vectorization is limited to single basic block counted loops.
If the vector operand is a phi node then Matcher::specialize_vector_operand(MachNode* m, uint idx) is not able to specialize vector register type and throws an assert that phi is not a Mach node.
This problem was not seen on jdk mainline, mostly because vector phi nodes usually don't occur there as auto-vectorization is limited to single basic block counted loops.
- backported by
-
JDK-8237061 Issues with specializing vector register type for phi operand with generic operands
-
- Resolved
-
-
JDK-8238128 Issues with specializing vector register type for phi operand with generic operands
-
- Resolved
-
- relates to
-
JDK-8234391 C2: Generic vector operands
-
- Resolved
-